--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -18,10 +18,10 @@
 # Environmental secrets are only available for that specific environment.
 
 development:
-  secret_key_base: <%= Figaro.env.secret_key_base %>
+  secret_key_base: ENV['secret_key_base']
 
 test:
-  secret_key_base: <%= Figaro.env.secret_key_base %>
+  secret_key_base: ENV['secret_key_base']
 
 # Do not keep production secrets in the unencrypted secrets file.
 # Instead, either read values from the environment.
