--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@
 /config/secrets.yml
 # Ignore application configuration
 /config/application.yml
+
+/config/master.key
+
+# Ignore master key for decrypting credentials and more.
+/config/master.key
